working ndata svm_problem struct, right now using linear indexing

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -30,4 +30,4 @@ svm-test.o: svm-test.c svm.o
 svm.o: svm.cpp svm.h
 	$(CXX) $(CFLAGS) -c svm.cpp
 clean:
-	rm -f *~ svm.o svm-test.o libsvm.so.$(SHVER)
+	rm -f *~ svm.o svm-test.o libsvm*
