struct types in julia

--- a/deps/Makefile
+++ b/deps/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -Wconversion -O3 -fPIC -D _DENSE_REP
 SHVER = 2
 OS = $(shell uname)
 
-all: svm-test-runner svm-test
+all: svm-test-runner svm-structs
 
 svm: svm.o
 	if [ "$(OS)" = "Darwin" ]; then \
@@ -13,21 +13,21 @@ svm: svm.o
 	fi; \
 	$(CXX) $${SHARED_LIB_FLAG} svm.o -o libsvm.so.$(SHVER)
 
-svm-test: svm-test.o svm.o
+svm-structs: svm-structs.o
 	if [ "$(OS)" = "Darwin" ]; then \
-		SHARED_LIB_FLAG="-dynamiclib -Wl,-install_name,libsvm.so.$(SHVER)"; \
+		SHARED_LIB_FLAG="-dynamiclib -Wl,-install_name,libsvm-structs.so"; \
 	else \
-		SHARED_LIB_FLAG="-shared -Wl,-soname,libsvm.so.$(SHVER)"; \
+		SHARED_LIB_FLAG="-shared -Wl,-soname,libsvm-structs.so"; \
 	fi; \
-	$(CXX) $${SHARED_LIB_FLAG} svm-test.o svm.o -o libsvm-test.so
+	$(CXX) $${SHARED_LIB_FLAG} svm-structs.o -o libsvm-structs.so
 
-svm-test-runner: svm-test-runner.c svm.o svm-test.o
-	$(CXX) $(CFLAGS) svm-test-runner.c svm.o svm-test.o -o ../bin/svm-test-runner -lm
+svm-test-runner: svm-test-runner.c svm-structs.o
+	$(CXX) $(CFLAGS) svm-test-runner.c svm-structs.o -o ../bin/svm-test-runner -lm
 
-svm-test.o: svm-test.c svm.o
-	$(CXX) $(CFLAGS) -c svm-test.c svm.o
+svm-structs.o: svm-structs.c svm.h
+	$(CXX) $(CFLAGS) -c svm-structs.c
 
 svm.o: svm.cpp svm.h
 	$(CXX) $(CFLAGS) -c svm.cpp
 clean:
-	rm -f *~ svm.o svm-test.o libsvm*
+	rm -f *~ svm.o svm-structs.o libsvm*
